--- a/unifyMange-client.plist
+++ b/unifyMange-client.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/857920241/unifyMange-client/master/unifyMange-client/icon57.png</string>
+					<string>https://github.com/857920241/unifyMange-client/raw/master/icon57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/857920241/unifyMange-client/master/unifyMange-client/icon512.png</string>
+					<string>https://github.com/857920241/unifyMange-client/raw/master/icon512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
