--- a/unifyMange-client.plist
+++ b/unifyMange-client.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://211.138.17.25:20100/gateway/setup/unifyManage-client.ipa</string>
+					<string>https://raw.githubusercontent.com/857920241/unifyMange-client/22af19d13268f1985b533d7b1e0bf380d39a680f/unifyManage-client.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -31,7 +31,7 @@
 				<key>bundle-identifier</key>
 				<string>com.ai.cmcchina.crm.UnifyManageClient</string>
 				<key>bundle-version</key>
-				<string>2.67</string>
+				<string>2.71</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
